--- a/tex/main.tex
+++ b/tex/main.tex
@@ -144,13 +144,13 @@
 
 
 \chapter{压缩与索引}
-这里我们介绍多引用索引结构的具体细节，随后我们建立简单的只通过主引用索引的结构，在此基础上再构建基于DAG（Directed Acyclic Graphs）的层次化引用。
+这里我们介绍多引用索引结构[]的具体细节，随后我们建立简单的只通过主引用索引的结构，在此基础上再构建基于DAG（Directed Acyclic Graphs）的层次化引用。
 
 
 
 \section{符号定义}
 首先我们介绍一下本章节用到的定义及符号表示。\par
-一个字符串$s$表示一个关于字符集$\Sigma$的有限序列，长度用$|s|$表示。两个字符串的连接用$s \circ t$表示。从下标$i$开始的长度为$n$的字符串用$s(i, n)$表示，特别的对于长度为$1$的子串（即一个字符）用$s(i)$表示，注意这里的下标从0开始。对于两个字符串$s$与$t$，如果他们之间的编辑距离不超过k，即$s$可以通过至多k次插入、修改、删除操作变为$t$，则称之$s$与$t$为k近似，记作$s \sim_{k} t$。\par
+一个字符串$s$表示一个关于字符集$\Sigma$的有限序列，长度用$|s|$表示。两个字符串的连接用$s \circ t$表示。从下标$i$开始的长度为$n$的字符串用$s(i, n)$表示，特别的对于长度为$1$的子串（即一个字符）用$s[i]$表示，注意这里的下标从0开始。对于两个字符串$s$与$t$，如果他们之间的编辑距离不超过k，即$s$可以通过至多k次插入、修改、删除操作变为$t$，则称之$s$与$t$为k近似，记作$s \sim_{k} t$。\par
 对于一个索引，我们用$RME$（Referential Match Entry）来表示，是由$(refid, start, length, mismatch)$组成的元组，其中$refid$是被引用串id，$start$表示起始位置，$length$表示长度，$mismatch$表示失配处的字符，即表示字符串$s_{refid}(start, length) \circ mismatch$。\par
 对于一个压缩字符串，我们用$RCS$（Referential Compression Sequence）来表示，同时记录下其中每个$RME$的前缀长度$offset_{i}$。
 
@@ -164,56 +164,162 @@
 
 
 \section{简单索引}
-在最简单的版本中，每个串都只以主引用作为索引。\par
-这里有一个样例，若字符串集合$S = \{s_{1}, s_{2}, ... s_{6}\}$，其中：\par
+在最简单的版本中，每个串都只以主引用作为索引。这里有一个样例，若字符串集合$S = \{s_{1}, s_{2}, ... s_{6}\}$，其中：\par
 \hspace{1cm}$s_{1}$ = Aho–Corasick Automaton, $s_{2}$ = Aho/Corasick,\par
-\hspace{1cm}$s_{3}$ = Aho/Corasick Automaton, $s_{4}$ = Aho/Corasick Automata,\par
+\hspace{1cm}$s_{3}$ = Aho/Corasick Automata, $s_{4}$ = Aho/Corasick Automatas,\par
 \hspace{1cm}$s_{5}$ = Link-cut Tree, $s_{6}$ = LinkCut Tree.\par
 对于$s_{2}$来说，引用$s_{1}$构成的$RCS$序列为$[(1, 0, 3, /), (1, 4, 7, k)]$，因为$s_{2} = s_{1}(0, 3) \circ / \circ s_{1}(4, 7) \circ k$。但对于$s_{5}$来说，这样显然就不合适了。因此，我们选择$s_{1}$与$s_{5}$作为主引用，即$PREF = \{s_{1}, s_{5}\}$。此时我们得到：\par
 \hspace{1cm}$comp(s_{1}, \{s_{1}\}) = [(1, 0, 21, n)]$\par
 \hspace{1cm}$comp(s_{2}, \{s_{1}\}) = [(1, 0, 3, /), (1, 4, 7, k)]$\par
-\hspace{1cm}$comp(s_{3}, \{s_{1}\}) = [(1, 0, 3, /), (1, 4, 17, n)]$\par
-\hspace{1cm}$comp(s_{4}, \{s_{1}\}) = [(1, 0, 3, /), (1, 4, 16, a)]$\par
+\hspace{1cm}$comp(s_{3}, \{s_{1}\}) = [(1, 0, 3, /), (1, 4, 16, a)]$\par
+\hspace{1cm}$comp(s_{4}, \{s_{1}\}) = [(1, 0, 3, /), (1, 4, 16, a), (1, 8, 0, s)]$\par
 \hspace{1cm}$comp(s_{5}, \{s_{5}\}) = [(5, 0, 12, e)]$\par
 \hspace{1cm}$comp(s_{6}, \{s_{5}\}) = [(5, 0, 4, C), (5, 6, 6, e)]$\par
 他们之间的引用关系如图\ref{imag_csimple}所示。\par
 
 \begin{figure}[htbp]
-\centering
-\includegraphics[scale=0.3]{image/err_ref.png}
-\caption{简单索引}\label{imag_csimple}
+	\centering
+	\includegraphics[scale=0.3]{image/csimple.png}
+	\caption{简单索引}\label{imag_csimple}
 \end{figure}
 
-下面，我们来介绍构建的具体算法。\par
+接下来，我们介绍构建的具体算法。\par
 在初始状态下，有$PREF = \emptyset$，$COMP = \emptyset$。随后加入$s_{1}$时，由于$PREF$为空，$s_{1}$无法选择任何引用，故将$s_{1}$加入$PREF$，得到$PREF = \{s_{1}\}$，$COMP = \{s_{1}\}$。在加入$s_{2}$时我们有两种选择：1）将$s_{2}$加入$PREF$；2）以$s_{1}$作为引用构建索引。显然，当$s_{1}$与$s_{2}$较为相似时，选择后者较优，这时我们得到$PREF = \{s_{1}\}$，$COMP = \{s_{1}, s_{2}\}$。否则选择前者，此时$PREF = \{s_{1}, s_{2}\}$，$COMP = \{s_{1}, s_{2}\}$。加入$s_{3}$时，要先与$PREF$中的所有主引用比较相似度，再进行决策。\par
-然而相似度的概念过于主观，因此我们的算法需要一定的策略来选择加入的方式，流程如算法\ref{algo_csimple}所示。\par
+然而相似度的概念过于主观，因此我们的算法需要一定的策略来选择加入的方式。每次添加字符串时，不妨对该串进行一次压缩，将得出的结果进行比较，选择较优的决策。流程如算法\ref{algo_csimple}所示。\par
 
 \begin{algorithm}[H]
 	\SetKwData{PREF}{PREF}\SetKwData{COMP}{COMP}\SetKwData{rcs}{rcs}\SetKwData{cost}{cost}
 	\SetKwFunction{Comp}{comp}\SetKwFunction{Sizeof}{sizeof}
 	\SetKwInOut{Input}{input}\SetKwInOut{Output}{output}
 	\Input{String sequence $S = \{s_{1}, s_{2}, ... , s_{n}\}$}
-	\Output{Simple Compression}
+	\Output{\PREF, \COMP}
 	\PREF $\leftarrow \emptyset$\;
 	\COMP $\leftarrow \emptyset$\;
 	\For{$i \leftarrow 1$ \KwTo $n$}{
 		\cost $\leftarrow \infty$\;
-		\If{$|$\PREF$|$ $>$ 0}{
+		\If{$\left| \PREF \right| > 0$}{
 			\rcs $\leftarrow$ \Comp{$s_{i}$, \PREF}\;
 			\cost $\leftarrow$ \Sizeof{\rcs}\;
 		}
 		\If{\cost $<$ \Sizeof{$s_{i}$}}{
-			\COMP $\leftarrow$ \COMP $\cup$ \{\rcs\}\;
+			\COMP $\leftarrow \COMP \cup \{\rcs\}$\;
 		}
 		\Else{
-			\PREF $\leftarrow$ \PREF $\cup$ \{\rcs\}\;
-			\COMP $\leftarrow$ \COMP $\cup$ \{$(s_{i}, 0, |s_{i}| - 1, s_{i}(|s_{i}| - 1))$\}\;
+			\PREF $\leftarrow \PREF \cup \{\rcs\}$\;
+			\COMP $\leftarrow \COMP \cup \{(s_{i}, 0, \left| s_{i} \right| - 1, s_{i}[\left| s_{i} \right| - 1])$\}\;
 		}
 	}
 	\caption{Computation of Simple Compression}\label{algo_csimple}
 \end{algorithm}
 
+这里的$comp$函数是将字符串关于某个引用集合进行压缩，由于结果的好坏直接影响到最终压缩率的大小，选择合适的算法就显得尤为重要了。不难发现，这一过程满足贪心的策略。每次在引用集合中匹配当前串的最长前缀，将该前缀对应的$RME$加入$RCS$集合后将其删除，再重复这一过程。流程如算法\ref{algo_comp}所示。\par
 
+\begin{algorithm}[H]
+	\SetKwData{s}{s}\SetKwData{REF}{REF}\SetKwData{pre}{pre}\SetKwData{rcs}{rcs}
+	\SetKwInOut{Input}{input}\SetKwInOut{Output}{output}
+	\Input{String \s, Reference set \REF = $\{ref_{1}, ref_{2}, ... , ref_{n}\}$}
+	\Output{\rcs of \s with respect to \REF}
+	\rcs $\leftarrow$ []\;
+	\While{$\left| \s \right| \neq 0$}{
+		\pre $\leftarrow$ longest prefix of \s in \REF\;
+		\If{\pre $\neq$ \s}{
+			add $(ref_{i}, pos, \left| \pre \right|, \s[\left| \pre \right|])$ to \rcs\;
+			\s $\leftarrow \s(\left| \pre \right| + 1, \left| \s \right| - \left| \pre \right| - 1)$\;
+		}
+		\Else{
+			add $(ref_{i}, pos, \left| \pre \right| - 1, \s[\left| \pre \right| - 1])$ to \rcs\;
+			remove \pre from \s\;
+		}
+	}
+	\caption{Compress with Reference}\label{algo_comp}
+\end{algorithm}
+
+值得注意的是，由于每一次都进行了尝试的压缩，$comp$函数的执行速度非常重要。因此，需要找到合适的数据结构用于快速匹配最长公共前缀，我们将在下一章进行讨论。
+
+
+
+\section{DAG索引}
+在上一节中构建的简单索引结构，虽然也达到了压缩的目的，但实际效果并不理想。由于只有主引用才会被当作索引，对于大量相似却又不在主引用集合中的字符串，还是构建了许多重复的$RCS$序列。本节将继续优化之前的简单结构，将压缩串也纳入被引用的范围，力求达到更高的压缩率。\par
+我们回到之前的样例，字符串$s_{4}$的压缩结果为：\par
+\hspace{1cm}$comp(s_{4}, \{s_{1}\}) = [(1, 0, 3, /), (1, 4, 16, a), (1, 8, 0, s)]$\par
+由于$s_{4}$与$s_{3}$比较接近，如果能通过$s_{3}$构建$s_{4}$的索引，那么就可以进一步减少所需空间：\par
+\hspace{1cm}$comp(s_{4}, \{s_{3}\}) = [(3, 0, 21, s)]$\par
+此时的引用关系变成了层次化的DAG，如图\ref{imag_cdag}所示。\par
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[scale=0.3]{image/cdag.png}
+	\caption{DAG索引}\label{imag_cdag}
+\end{figure}
+
+优化的方法并不复杂，只需要在前面的简单索引结构上加以改进。如果我们通过Hash将所有不同的$RME$对应为不同的数值，那么每个$RCS$就是一个数列。现在的问题变成了，要用已知的数列集合，压缩当前的数列。不难发现，这与之前的$comp$函数做的是同样的事情，仅仅是将字符串换成了数列。具体的过程也十分类似，只加了一步Hash转化，这里就不赘述了。\par
+至此，我们已经完成了对索引结构的构建，实现了基本的压缩功能。下一章将介绍所需的数据结构，用于加速上述的算法过程。
+
+
+
+\chapter{后缀自动机}
+对于前面的压缩过程，需要在字符串集合中快速匹配模式串的最长前缀。而对于之后的k近似查询，也需要找出模式串在集合中出现的所有位置。由于字符串的集合可以动态增加，所选取的数据结构必须能够动态维护。基于上述特性，虽然后缀树也可以满足需求，但本身结构较为复杂。因此，我们选择了较为简洁，却与后缀树效果相同的后缀自动机[]作为主要的数据结构。
+
+
+
+\section{符号定义}
+有限状态自动机是一种可以识别字符串的数据结构，对于一个自动机$A$，若他能识别字符串$s$，则记$A(s) = True$，否则$A(s) = False$。自动机由以下几部分构成：$\Sigma$为字符集，$state$表示状态集合，$init$为初始状态，$end$为结束状态集合，$trans$表示状态转移函数。用$trans(S, ch)$表示在状态$S$下读入字符$ch$后所达到的状态，同时令$trans(S, str)$表示在状态$S$下读入字符串$str$后所达到的状态。那么自动机$A$所能识别的字符串就是所有使得$trans(init, s) \subset end$的字符串$s$，记为$Reg(A)$。而从状态$S$开始能识别的字符串，即所有使得$trans(S, s) \subset end$的字符串$s$，记为$Reg(S)$。
+
+
+
+\section{算法原理}
+顾名思义，关于字符串$s$的后缀自动机Suffix Automaton（简称SAM）是一个能识别$s$所有后缀的自动机，即$SAM(t) = True$当且仅当$t$是$s$的后缀。后面会介绍，$SAM$也能用于识别$s$所有的子串。这里，我们只关心最简状态后缀自动机，及及即状态数最少的自动机。可以证明，它的状态空间是线性的，这里就不详细说了。\par
+对于最简状态后缀自动机$SAM$，我们用$ST(str)$表示$trans(init, str)$，即从初始状态读入字符串$str$后达到的状态。对于字符串$s$，记它的后缀集合为$Suf$，子串集合为$Fac$。对于任何一个属于$Fac$的字符串$t$，$ST(t)$都对应一个合法的状态，因为可以在后面加入一些字符使其变成$s$的后缀。但我们不能将每个$t \in Fac$都对应一个状态，因为$Fac$的大小是$O(N^2)$的。考虑$ST(t)$所能识别的字符串集合$Reg(ST(t))$，对于$s$的后缀$x \in Suf$，如果$ST(t)$能识别$x$，则$t \circ x \in Suf$，即$Reg(ST(t))$是一些后缀集合。如果我们用$Right(t)$表示子串$t$出现的所有位置的右端点集合，那么$Reg(ST(t))$就完全由$Right(t)$决定。对于两个子串$u, v \in Fac$，如果$Right(u) = Right(v)$，则$ST(u) = ST(v)$。所以一个状态$S$对应所有$Right$集合等于$Right(t)$的字符串。\par
+对于一个下标$r \in Right(t)$，只需要指定子串的长度$len$，就可以确定子串为$s(r - len, len)$。即给定一个状态的$Right$集合，只需要子串长度便可以确定子串。当给定的长度变短时，子串出现的位置可能变多，以至于超出$Right$集合的范围，但必然包含该$Right$集合。反之则得到$Right$集合的子集。因此对于不同的状态，$Right$集合要么不相交，要么一个是另一个的真子集。不难发现，这种集合构成了树形的关系，我们称之为Parent树，如图\ref{imag_partree}所示。\par
+
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[scale=0.3]{image/cdag.png}
+	\caption{Parent树}\label{imag_partree}
+\end{figure}
+
+不难发现，每个状态的$Right$集合都等于其孩子状态$Right$集合的并集，因此我们不必存下每个状态的$Right$集合，需要时通过dfs查询即可。\par
+对于最长公共前缀的查询，我们只需要沿着状态转移函数走，直至走不到合法状态为止。从当前状态的$Right$集合中选出一个下标，结合转移步数，便可定位匹配的子串。而对于一般的字符串匹配，则必须将模式串全部走完，再递归求出整个$Right$集合，得到全部匹配的子串。\par
+下面，我们来看如何动态构建$SAM$。
+
+
+
+\section{动态构建}
+
+
+
+
+
+
+%现在开始正文
+
+\chapter{引言}
+
+\section{背景}
+
+众所周知，编写毕业论文的过程如算法\ref{algor:write}所示。
+
+\begin{algorithm}[H]
+	\KwData{字符串}
+	\KwResult{一篇毕业论文}
+	初始化\;
+	\While{当前时间未达到截止时间}{
+		阅读现有内容\;
+		\If{不知道自己在写什么}{
+			重写\;
+		}
+	}
+	\caption{编写毕业论文}
+	\label{algor:write}
+\end{algorithm}
+
+\section{国内外研究现状}
+
+国内外众多高校的毕业论文都有官方或非官方\LaTeX 模版，让莘莘学子从繁琐的排版细节中解放出来，得以集中精力于研究和写作工作本身。 
+
+\section{本文工作}
+
+我们建立了一个尽可能符合《中山大学本科生毕业论文(设计)写作与印制规范》的\LaTeX 模版，容许任何人自由使用，然而我们无法保证它是否完全符合学校的相关要求，甚至不保证它可以正常编译\endnote{反正我是可以正常编译。}。对于使用此模版造成的任何后果，本人不负有任何责任。
 
 \chapter{模版使用说明}
 
@@ -222,11 +328,11 @@
 本模版主要组成部分有：
 
 \begin{itemize}
-\item {\ttfamily main.tex}为主文件，毕业论文的内容应放在这个文件中。
-\item {\ttfamily main.bib}为参考文献记录。
-\item {\ttfamily sysuthesis.bst}为参考文献样式文件。
-\item {\ttfamily sysuthesis.cls}为文类文件，应与主文件放在相同的目录中。
-\item {\ttfamily image/logo.png}为用在封面的校徽。
+	\item {\ttfamily main.tex}为主文件，毕业论文的内容应放在这个文件中。
+	\item {\ttfamily main.bib}为参考文献记录。
+	\item {\ttfamily sysuthesis.bst}为参考文献样式文件。
+	\item {\ttfamily sysuthesis.cls}为文类文件，应与主文件放在相同的目录中。
+	\item {\ttfamily image/logo.png}为用在封面的校徽。
 \end{itemize}
 
 主文件{\ttfamily main.tex}基本上是自解释的。在正常使用时，只用按照源文件中注释在正确位置填写各种基本信息、开题报告内容和中英文摘要内容，然后把注释``现在开始正文''到注释``篇末注''之间部分替换为正文，再按照注释在正确位置加入参考文献、致谢和附录等。最后用{\ttfamily xelatex}编译即可：
@@ -244,20 +350,20 @@ xelatex main
 在使用本模版前，请先保证已安装以下宏包：
 
 \begin{itemize}
-\item {\ttfamily ctex}
-\item {\ttfamily tocloft}
-\item {\ttfamily calc}
-\item {\ttfamily graphicx}
-\item {\ttfamily amsmath}
-\item {\ttfamily amssymb}
-\item {\ttfamily amsthm}
-\item {\ttfamily listings}
-\item {\ttfamily subfig}
-\item {\ttfamily longtable}
-\item {\ttfamily endnotes}
-\item {\ttfamily algorithm2e}
-\item {\ttfamily hyperref}
-\item {\ttfamily placeins}
+	\item {\ttfamily ctex}
+	\item {\ttfamily tocloft}
+	\item {\ttfamily calc}
+	\item {\ttfamily graphicx}
+	\item {\ttfamily amsmath}
+	\item {\ttfamily amssymb}
+	\item {\ttfamily amsthm}
+	\item {\ttfamily listings}
+	\item {\ttfamily subfig}
+	\item {\ttfamily longtable}
+	\item {\ttfamily endnotes}
+	\item {\ttfamily algorithm2e}
+	\item {\ttfamily hyperref}
+	\item {\ttfamily placeins}
 \end{itemize}
 
 为了让{\ttfamily algorithm2e}宏包支持中文，请把该宏包的文件{\ttfamily algorithm2e.sty}（在我的系统中，它在{\ttfamily /usr/share/texlive/texmf-dist/tex/latex/algorithm2e/}）替换为本模版附带的同名文件。不需要描述算法时，可以在{\ttfamily sysuthesis.cls}中去掉以下代码
@@ -292,18 +398,18 @@ xelatex main
 正文一般包括以下几个方面:
 
 \begin{enumerate}
-\item 引言或背景\\
-引言是论文正文的开端,应包括毕业论文选题的背景、目的和意义;对国内外研究现状和相关领域中已有的研究成果的简要评述;介绍本项研究工作研究设想、研究方法或实验设计、理论依据或实验基础;涉及范围和预期结果等。要求言简意赅,注意不要与摘要雷同或成为摘要的注解。
-\item 主体\\
-论文主体是毕业论文的主要部分,必须言之成理,论据可靠,严格遵循本学科国际通行的学术规范。在写作上要注意结构合理、层次分明、重点突出,章节标题、公式图表符号必须规范统一。论文主体的内容根据不同学科有不同的特点,一般应包括以下几个方面:
-\begin{itemize}
-\item 毕业论文(设计)总体方案或选题的论证;
-\item 毕业论文(设计)各部分的设计实现,包括实验数据的获取、数据可行性及有效性的处理与分析、各部分的设计计算等;
-\item 对研究内容及成果的客观阐述,包括理论依据、创新见解、创造性成果及其改进与实际应用价值等;
-\item 论文主体的所有数据必须真实可靠,凡引用他人观点、方案、资料、数据等,无论曾否发表,无论是纸质或电子版,均应详加注释。自然科学论文应推理正确、结论清晰;人文和社会学科的论文应把握论点正确、论证充分、论据可靠,恰当运用系统分析和比较研究的方法进行模型或方案设计,注重实证研究和案例分析,根据分析结果提出建议和改进措施等。
-\end{itemize}
-\item 结论\\
-结论是毕业论文的总结,是整篇论文的归宿,应精炼、准确、完整。结论应着重阐述自己的创造性成果及其在本研究领域中的意义、作用,还可进一步提出需要讨论的问题和建议。
+	\item 引言或背景\\
+		引言是论文正文的开端,应包括毕业论文选题的背景、目的和意义;对国内外研究现状和相关领域中已有的研究成果的简要评述;介绍本项研究工作研究设想、研究方法或实验设计、理论依据或实验基础;涉及范围和预期结果等。要求言简意赅,注意不要与摘要雷同或成为摘要的注解。
+	\item 主体\\
+		论文主体是毕业论文的主要部分,必须言之成理,论据可靠,严格遵循本学科国际通行的学术规范。在写作上要注意结构合理、层次分明、重点突出,章节标题、公式图表符号必须规范统一。论文主体的内容根据不同学科有不同的特点,一般应包括以下几个方面:
+		\begin{itemize}
+			\item 毕业论文(设计)总体方案或选题的论证;
+			\item 毕业论文(设计)各部分的设计实现,包括实验数据的获取、数据可行性及有效性的处理与分析、各部分的设计计算等;
+			\item 对研究内容及成果的客观阐述,包括理论依据、创新见解、创造性成果及其改进与实际应用价值等;
+			\item 论文主体的所有数据必须真实可靠,凡引用他人观点、方案、资料、数据等,无论曾否发表,无论是纸质或电子版,均应详加注释。自然科学论文应推理正确、结论清晰;人文和社会学科的论文应把握论点正确、论证充分、论据可靠,恰当运用系统分析和比较研究的方法进行模型或方案设计,注重实证研究和案例分析,根据分析结果提出建议和改进措施等。
+		\end{itemize}
+	\item 结论\\
+		结论是毕业论文的总结,是整篇论文的归宿,应精炼、准确、完整。结论应着重阐述自己的创造性成果及其在本研究领域中的意义、作用,还可进一步提出需要讨论的问题和建议。
 \end{enumerate}
 
 \section{毕业论文的撰写格式要求}
@@ -315,104 +421,104 @@ xelatex main
 名词术语的要求：
 
 \begin{itemize}
-\item 科学技术名词术语尽量采用全国自然科学名词审定委员会公布的规范词或国家标准、部标准中规定的名称,尚未统一规定或叫法有争议的名词术语,可采用惯用的名称。
-\item 特定含义的名词术语或新名词、以及使用外文缩写代替某一名词术语时 , 首 次 出 现 时 应 在 括 号 内 注 明 其 含 义 , 如 : OECD ( Organisation for Economic Co-operation and Development) 代替经济合作发展组织。
-\item 外国人名一般采用英文原名,可不译成中文,英文人名按姓前名后的原则书写,如:CRAY P,不可将外国人姓名中的名部分漏写,例如:不能只写CRAY, 应写成 CRAY P。一般很熟知的外国人名(如牛顿、爱因斯坦、达尔文、马克思等)可按通常标准译法写译名。
+	\item 科学技术名词术语尽量采用全国自然科学名词审定委员会公布的规范词或国家标准、部标准中规定的名称,尚未统一规定或叫法有争议的名词术语,可采用惯用的名称。
+	\item 特定含义的名词术语或新名词、以及使用外文缩写代替某一名词术语时 , 首 次 出 现 时 应 在 括 号 内 注 明 其 含 义 , 如 : OECD ( Organisation for Economic Co-operation and Development) 代替经济合作发展组织。
+	\item 外国人名一般采用英文原名,可不译成中文,英文人名按姓前名后的原则书写,如:CRAY P,不可将外国人姓名中的名部分漏写,例如:不能只写CRAY, 应写成 CRAY P。一般很熟知的外国人名(如牛顿、爱因斯坦、达尔文、马克思等)可按通常标准译法写译名。
 \end{itemize}
 
 物理量名称、符号与计量单位的要求：
 
 \begin{itemize}
-\item 论文中某一物理量的名称和符号应统一,一律采用国务院发布的《中华人民共和国法定计量单位》。单位名称和符号的书写方式,应采用国际通用符号。
-\item 在不涉及具体数据表达时允许使用中文计量单位如“千克”。
-\item 表 达 时 刻 应 采 用 中 文 计 量 单 位 , 如 “ 下 午 3 点 10 分 ” , 不 能 写 成“3h10min”,在表格中可以用“3:10PM”表示。
-\item 物理量符号、物理量常量、变量符号用斜体,计量单位符号均用正体。
+	\item 论文中某一物理量的名称和符号应统一,一律采用国务院发布的《中华人民共和国法定计量单位》。单位名称和符号的书写方式,应采用国际通用符号。
+	\item 在不涉及具体数据表达时允许使用中文计量单位如“千克”。
+	\item 表 达 时 刻 应 采 用 中 文 计 量 单 位 , 如 “ 下 午 3 点 10 分 ” , 不 能 写 成“3h10min”,在表格中可以用“3:10PM”表示。
+	\item 物理量符号、物理量常量、变量符号用斜体,计量单位符号均用正体。
 \end{itemize}
 
 数字的要求：
 
 \begin{itemize}
-\item 无特别约定情况下,一般均采用印度——阿拉伯数字表示。
-\item 年份一律使用 4 位数字表示。
-\item 小数的表示方法:一般情形下,小于 1 的数,需在小数点之前加 0。但当某些特殊数字不可能大于 1 时(如相关系数、比率、概率值),小数点之前的 0 要去掉,如 r=.26,p<.05。
-\item 统计符号的格式:一般除 μ、α、β、λ、ε 以及 V 等符号外,其余统计符号一律以斜体字呈现,如ANCOVA , ANOVA , MANOVA , N , nl , M , SD , F , p , r 等。
+	\item 无特别约定情况下,一般均采用印度——阿拉伯数字表示。
+	\item 年份一律使用 4 位数字表示。
+	\item 小数的表示方法:一般情形下,小于 1 的数,需在小数点之前加 0。但当某些特殊数字不可能大于 1 时(如相关系数、比率、概率值),小数点之前的 0 要去掉,如 r=.26,p<.05。
+	\item 统计符号的格式:一般除 μ、α、β、λ、ε 以及 V 等符号外,其余统计符号一律以斜体字呈现,如ANCOVA , ANOVA , MANOVA , N , nl , M , SD , F , p , r 等。
 \end{itemize}
 
 公式的要求：
 
 \begin{itemize}
-\item 公式应另起一行写在稿纸中央。一行写不完的长公式,最好在等号处转行,如做不到这一点,可在运算符号(如“+”、“-”号)处转行,等号或运算符号应在转行后的行首。
-\item 公式的编号用圆括号括起,放在公式右边行末,在公式和编号之间不加虚线。公式可按全文统编序号,也可按章独立序号,如(49)或(4.11)。采用哪一种序号应和图序、表序编法一致。不应出现某章里的公式编序号,有的则不编序号。子公式可不编序号,需要引用时可加编 a、b、c......,重复引用的公式不得另编新序号。公式序号必须连续,不得重复或跳缺。
-\item 文中引用某一公式时,写成“由式(16.20)”。
+	\item 公式应另起一行写在稿纸中央。一行写不完的长公式,最好在等号处转行,如做不到这一点,可在运算符号(如“+”、“-”号)处转行,等号或运算符号应在转行后的行首。
+	\item 公式的编号用圆括号括起,放在公式右边行末,在公式和编号之间不加虚线。公式可按全文统编序号,也可按章独立序号,如(49)或(4.11)。采用哪一种序号应和图序、表序编法一致。不应出现某章里的公式编序号,有的则不编序号。子公式可不编序号,需要引用时可加编 a、b、c......,重复引用的公式不得另编新序号。公式序号必须连续,不得重复或跳缺。
+	\item 文中引用某一公式时,写成“由式(16.20)”。
 \end{itemize}
 
 表格的要求(表\ref{tab:skew}为一个也许不合格的例子)：
 
 \begin{itemize}
-\item 表格必须与论文叙述有直接联系,不得出现与论文叙述脱节的表格。表格中的内容在技术上不得与正文矛盾。
-\item 每个表格都应有自己的标题和序号。标题应写在表格上方正中,不加标点,序号写在标题左方。
-\item 全文的表格可以统一编序,也可以逐章单独编序。采用哪一种方式应和插图、公式的编序方式统一。表序必须连续,不得跳缺。
-\item 表格允许下页接写,接写时标题省略,表头应重复书写,并在右上方写“续表××”。多项大表可以分割成块,多页书写,接口处必须注明“接下页”、“接上页”、“接第×页”字样。
-\item 表格应放在离正文首次出现处最近的地方,不应超前和过分拖后。
+	\item 表格必须与论文叙述有直接联系,不得出现与论文叙述脱节的表格。表格中的内容在技术上不得与正文矛盾。
+	\item 每个表格都应有自己的标题和序号。标题应写在表格上方正中,不加标点,序号写在标题左方。
+	\item 全文的表格可以统一编序,也可以逐章单独编序。采用哪一种方式应和插图、公式的编序方式统一。表序必须连续,不得跳缺。
+	\item 表格允许下页接写,接写时标题省略,表头应重复书写,并在右上方写“续表××”。多项大表可以分割成块,多页书写,接口处必须注明“接下页”、“接上页”、“接第×页”字样。
+	\item 表格应放在离正文首次出现处最近的地方,不应超前和过分拖后。
 \end{itemize}
 
 \begin{table}[hbp]
-\caption{各个倾斜校正方法性能对比}
-\centering
-\begin{tabular}{lrrrrr}
-\hline
-& 成功返回率 & 平均误差& 均方误差& 误差中位数& 运行时间中位数\\
-& & （弧度） & （弧度） & （弧度） & （毫秒）\\\hline
-参照方法&$\mathbf{100.00\%}$&0.1298&0.1504&0.1286&$\mathbf{0}$\\
-分片填涂方法&93.48\%&0.0621&0.1947&0.0061&50\\
-分片覆盖方法&99.10\%&0.0154&$\mathbf{0.0299}$&0.0073&300\\
-投影方法&99.35\%&$\mathbf{0.0068}$&0.0335&$\mathbf{0.0033}$&197\\
-交错数方法&99.35\%&0.0101&0.0458&0.0035&198\\
-霍夫变换方法&99.35\%&0.1448&0.1827&0.0452&99\\
-行间相关方法&93.81\%&0.2115&0.3811&0.0346&1615\\
-最近邻方法&96.71\%&0.0883&0.1207&0.0690&67\\\hline
-\end{tabular}
-\label{tab:skew}
+	\caption{各个倾斜校正方法性能对比}
+	\centering
+	\begin{tabular}{lrrrrr}
+		\hline
+		& 成功返回率 & 平均误差& 均方误差& 误差中位数& 运行时间中位数\\
+  & & （弧度） & （弧度） & （弧度） & （毫秒）\\\hline
+		参照方法&$\mathbf{100.00\%}$&0.1298&0.1504&0.1286&$\mathbf{0}$\\
+		分片填涂方法&93.48\%&0.0621&0.1947&0.0061&50\\
+		分片覆盖方法&99.10\%&0.0154&$\mathbf{0.0299}$&0.0073&300\\
+		投影方法&99.35\%&$\mathbf{0.0068}$&0.0335&$\mathbf{0.0033}$&197\\
+		交错数方法&99.35\%&0.0101&0.0458&0.0035&198\\
+		霍夫变换方法&99.35\%&0.1448&0.1827&0.0452&99\\
+		行间相关方法&93.81\%&0.2115&0.3811&0.0346&1615\\
+		最近邻方法&96.71\%&0.0883&0.1207&0.0690&67\\\hline
+	\end{tabular}
+	\label{tab:skew}
 \end{table}
 
 图的要求(图\ref{fig:skew}为一个也许不合格的例子)：
 
 \begin{itemize}
-\item 插图应与文字内容相符,技术内容正确。所有制图应符合国家标准和专业标准。对无规定符号的图形应采用该行业的常用画法。
-\item 每幅插图应有标题和序号,全文的插图可以统一编序,也可以逐章单独编序,如:图 45 或图 6.8。采取哪一种方式应和表格、公式的编序方式统一。图序必须连续,不重复,不跳缺。
-\item 由若干分图组成的插图,分图用 a、b、c......标序。分图的图名以及图中各种代号的意义,以图注形式写在图题下方,先写分图名,另起行写代号的意义。
-\item 图与图标题、图序号为一个整体,不得拆开排版为两页。当页空白不够排版该图整体时,可将其后文字部分提前,将图移至次页最前面。
-\item 对坐标轴必须进行文字标示,有数字标注的坐标图必须注明坐标单位。
+	\item 插图应与文字内容相符,技术内容正确。所有制图应符合国家标准和专业标准。对无规定符号的图形应采用该行业的常用画法。
+	\item 每幅插图应有标题和序号,全文的插图可以统一编序,也可以逐章单独编序,如:图 45 或图 6.8。采取哪一种方式应和表格、公式的编序方式统一。图序必须连续,不重复,不跳缺。
+	\item 由若干分图组成的插图,分图用 a、b、c......标序。分图的图名以及图中各种代号的意义,以图注形式写在图题下方,先写分图名,另起行写代号的意义。
+	\item 图与图标题、图序号为一个整体,不得拆开排版为两页。当页空白不够排版该图整体时,可将其后文字部分提前,将图移至次页最前面。
+	\item 对坐标轴必须进行文字标示,有数字标注的坐标图必须注明坐标单位。
 \end{itemize}
 
 \begin{figure}[htbp]
-\centering
-\subfloat[参照方法]{
-\includegraphics[scale=0.15]{image/err_ref.png}
-}
-\subfloat[分片填涂方法]{
-\includegraphics[scale=0.15]{image/err_ppa.png}
-}\\
-\subfloat[分片覆盖方法]{
-\includegraphics[scale=0.15]{image/err_pcp.png}
-}
-\subfloat[投影方法]{
-\includegraphics[scale=0.15]{image/err_pp.png}
-}\\
-\subfloat[交错数方法]{
-\includegraphics[scale=0.15]{image/err_tc.png}
-}
-\subfloat[霍夫变换方法]{
-\includegraphics[scale=0.15]{image/err_ht.png}
-}\\
-\subfloat[行间相关方法]{
-\includegraphics[scale=0.15]{image/err_cc.png}
-}
-\subfloat[最近邻方法]{
-\includegraphics[scale=0.15]{image/err_nn.png}
-}
-\caption{各个倾斜校正方法的残差图}
-\label{fig:skew}
+	\centering
+	\subfloat[参照方法]{
+		\includegraphics[scale=0.15]{image/err_ref.png}
+	}
+	\subfloat[分片填涂方法]{
+		\includegraphics[scale=0.15]{image/err_ppa.png}
+	}\\
+	\subfloat[分片覆盖方法]{
+		\includegraphics[scale=0.15]{image/err_pcp.png}
+	}
+	\subfloat[投影方法]{
+		\includegraphics[scale=0.15]{image/err_pp.png}
+	}\\
+	\subfloat[交错数方法]{
+		\includegraphics[scale=0.15]{image/err_tc.png}
+	}
+	\subfloat[霍夫变换方法]{
+		\includegraphics[scale=0.15]{image/err_ht.png}
+	}\\
+	\subfloat[行间相关方法]{
+		\includegraphics[scale=0.15]{image/err_cc.png}
+	}
+	\subfloat[最近邻方法]{
+		\includegraphics[scale=0.15]{image/err_nn.png}
+	}
+	\caption{各个倾斜校正方法的残差图}
+	\label{fig:skew}
 \end{figure}
 
 \chapter{结论}
@@ -426,14 +532,14 @@ xelatex main
 此模版有以下已知局限性：
 
 \begin{itemize}
-\item 篇末注只支持最多10个
-\item 有时用户可能要直接修改cls文件
-\item 遗留了一些格式化代码在tex文件
+	\item 篇末注只支持最多10个
+	\item 有时用户可能要直接修改cls文件
+	\item 遗留了一些格式化代码在tex文件
 \end{itemize}
 
 
 %篇末注（非常抱歉只支持最多10个，在正文通过\endnote{}命令生成）
-%\displayendnotes
+\displayendnotes
 
 %参考文献是毕业设计(论文)不可缺少的组成部分,它反映毕业设计(论文)的取材来源、材料的广博程度和材料的可靠程度,也是作者对他人知识成果的承认和尊重。一份完整的参考文献可向读者提供一份有价值的信息资料,列入的文献应在 10 篇以上,其中外文文献在 2 篇以上。
 \zihao{-5}\songti
@@ -444,16 +550,16 @@ xelatex main
 
 \begin{thankto}
 
-\songti\zihao{-4}
-%谢辞应以简短的文字对课题研究与论文撰写过程中曾直接给予帮助的人员(例如指导教师、答疑教师及其他人员)表示对自己的谢意,这不仅是一种礼貌,也是对他人劳动的尊重,是治学者应当遵循的学术规范。内容限一页。
-%以下为致谢内容
-致谢内容
+	\songti\zihao{-4}
+	%谢辞应以简短的文字对课题研究与论文撰写过程中曾直接给予帮助的人员(例如指导教师、答疑教师及其他人员)表示对自己的谢意,这不仅是一种礼貌,也是对他人劳动的尊重,是治学者应当遵循的学术规范。内容限一页。
+	%以下为致谢内容
+	致谢内容
 
-\vskip 18pt
-\begin{flushright}
-作者\\
-\today
-\end{flushright}
+	\vskip 18pt
+	\begin{flushright}
+		作者\\
+		\today
+	\end{flushright}
 \end{thankto}
 
 %对于一些不宜放在正文中的重要支撑材料,可编入毕业论文的附录中。包括某些重要的原始数据、详细数学推导、程序全文及其说明、复杂的图表、设计图纸等一系列需要补充提供的说明材料。如果毕业设计(论文)中引用的实例、数据资料,实验结果等符号较多时,为了节约篇幅,便于读者查阅,可以编写一个符号说明,注明符号代表的意义。附录的篇幅不宜太多,一般不超过正文。
@@ -461,17 +567,17 @@ xelatex main
 \chapter{记号约定}
 \songti\zihao{-4}
 \begin{longtable}{ll}
-记号 & 说明\\
-\endfirsthead
-记号 & 说明\\
-\endhead
-\endfoot
-\endlastfoot
-$A \cup B$ & 集合$A$与集合$B$的并集\\
-$A \cap B$ & 集合$A$与集合$B$的交集\\
-$A \setminus B$ & 集合$A$与集合$B$的差集\\
-$A \times B$ & 集合$A$与集合$B$的直积\\
-$A / \simeq$ & 集合$A$关于等价关系$\simeq$的商集\\
+	记号 & 说明\\
+	\endfirsthead
+	记号 & 说明\\
+	\endhead
+	\endfoot
+	\endlastfoot
+	$A \cup B$ & 集合$A$与集合$B$的并集\\
+	$A \cap B$ & 集合$A$与集合$B$的交集\\
+	$A \setminus B$ & 集合$A$与集合$B$的差集\\
+	$A \times B$ & 集合$A$与集合$B$的直积\\
+	$A / \simeq$ & 集合$A$关于等价关系$\simeq$的商集\\
 \end{longtable}
 
 \backmatter
