--- a/tex/main.tex
+++ b/tex/main.tex
@@ -191,7 +191,7 @@
 	\SetKwData{PREF}{PREF}\SetKwData{COMP}{COMP}\SetKwData{rcs}{rcs}\SetKwData{cost}{cost}
 	\SetKwFunction{Comp}{comp}\SetKwFunction{Sizeof}{sizeof}
 	\SetKwInOut{Input}{input}\SetKwInOut{Output}{output}
-	\Input{String sequence $S = \{s_{1}, s_{2}, ... , s_{n}\}$}
+	\Input{string sequence $S = \{s_{1}, s_{2}, ... , s_{n}\}$}
 	\Output{\PREF, \COMP}
 	$\PREF \leftarrow \COMP \leftarrow \emptyset$\;
 	\For{$i \leftarrow 1$ \KwTo $n$}{
@@ -216,7 +216,7 @@
 \begin{algorithm}[H]
 	\SetKwData{s}{s}\SetKwData{REF}{REF}\SetKwData{pre}{pre}\SetKwData{rcs}{rcs}
 	\SetKwInOut{Input}{input}\SetKwInOut{Output}{output}
-	\Input{String \s, Reference set \REF = $\{ref_{1}, ref_{2}, ... , ref_{n}\}$}
+	\Input{string \s, reference set \REF = $\{ref_{1}, ref_{2}, ... , ref_{n}\}$}
 	\Output{\rcs of \s with respect to \REF}
 	\rcs $\leftarrow$ []\;
 	\While{$\left| \s \right| \neq 0$}{
@@ -257,19 +257,19 @@
 
 
 \chapter{后缀自动机}
-对于前面的压缩过程，需要在字符串集合中快速匹配模式串的最长前缀。而对于之后的k近似查询，也需要找出模式串在集合中出现的所有位置。由于字符串的集合可以动态增加，所选取的数据结构必须能够动态维护。基于上述特性，虽然后缀树也可以满足需求，但本身结构较为复杂。因此，我们选择了较为简洁，却与后缀树效果相同的后缀自动机[]作为主要的数据结构。
+对于前面的压缩过程，需要在字符串集合中快速匹配模式串的最长前缀。而对于之后的k近似查询，也要找出模式串在集合中出现的所有位置。由于字符串的集合可以动态增加，所选取的数据结构必须能够动态维护。基于上述特性，虽然后缀树也可以满足需求，但本身结构较为复杂。因此，我们选择了较为简洁，却与后缀树效果相同的后缀自动机[]作为主要的数据结构。
 
 
 
 \section{符号定义}
-有限状态自动机是一种可以识别字符串的数据结构，对于一个自动机$A$，若他能识别字符串$s$，则记$A(s) = True$，否则$A(s) = False$。自动机由以下几部分构成：$\Sigma$为字符集，$State$表示状态集合，$Init$为初始状态，$End$为结束状态集合，$Trans$表示状态转移函数。用$trans(S, ch)$表示在状态$S$下读入字符$ch$后所达到的状态，同时令$trans(S, str)$表示在状态$S$下读入字符串$str$后所达到的状态。那么自动机$A$所能识别的字符串就是所有使得$trans(Init, s) \subset End$的字符串$s$，记为$Reg(A)$。而从状态$S$开始能识别的字符串，即所有使得$trans(S, s) \subset End$的字符串$s$，记为$Reg(S)$。
+有限状态自动机是一种可以识别字符串的数据结构，对于一个自动机$A$，若他能识别字符串$s$，则记$A(s) = True$，否则$A(s) = False$。自动机由以下几部分构成：$\Sigma$为字符集，$State$表示状态集合，$Init$为初始状态，$End$为结束状态集合，$Trans$表示状态转移函数。用$trans(S, ch)$表示在状态$S$下读入字符$ch$后所达到的状态，同时令$trans(S, str)$表示在状态$S$下读入字符串$str$后所达到的状态。那么自动机$A$所能识别的字符串就是所有使得$trans(Init, s) \in End$的字符串$s$，记为$Reg(A)$。而从状态$S$开始能识别的字符串，即所有使得$trans(S, s) \in End$的字符串$s$，记为$Reg(S)$。
 
 
 
 \section{算法原理}
-顾名思义，关于字符串$s$的后缀自动机Suffix Automaton（简称SAM）是一个能识别$s$所有后缀的自动机，即$SAM(t) = True$当且仅当$t$是$s$的后缀。后面会介绍，$SAM$也能用于识别$s$所有的子串。这里，我们只关心最简状态后缀自动机，及及即状态数最少的自动机。可以证明，它的状态空间是线性的，这里就不详细说了。\par
+顾名思义，关于字符串$s$的后缀自动机Suffix Automaton（简称SAM）是一个能识别$s$所有后缀的自动机，即$SAM(t) = True$当且仅当$t$是$s$的后缀。后面会介绍，$SAM$也能用于识别$s$所有的子串。这里，我们只关心最简状态后缀自动机，即状态数最少的自动机。后面会给出证明，它的复杂度是线性的。\par
 对于最简状态后缀自动机$SAM$，我们用$ST(str)$表示$trans(Init, str)$，即从初始状态读入字符串$str$后达到的状态。对于字符串$s$，记它的后缀集合为$Suf$，子串集合为$Fac$。对于任何一个属于$Fac$的字符串$t$，$ST(t)$都对应一个合法的状态，因为可以在后面加入一些字符使其变成$s$的后缀。但我们不能将每个$t \in Fac$都对应一个状态，因为$Fac$的大小是$O(N^2)$的。考虑$ST(t)$所能识别的字符串集合$Reg(ST(t))$，对于$s$的后缀$x \in Suf$，如果$ST(t)$能识别$x$，则$t \circ x \in Suf$，即$Reg(ST(t))$是一些后缀集合。如果我们用$Right(t)$表示子串$t$出现的所有位置的右端点集合，那么$Reg(ST(t))$就完全由$Right(t)$决定。对于两个子串$u, v \in Fac$，如果$Right(u) = Right(v)$，则$ST(u) = ST(v)$。所以一个状态$S$对应所有$Right$集合等于$Right(t)$的字符串。\par
-对于一个下标$r \in Right(t)$，只需要指定子串的长度$len$，就可以确定子串为$s(r - len, len)$。即给定一个状态的$Right$集合，只需要子串长度便可以确定子串。当给定的长度变短时，子串出现的位置可能变多，以至于超出$Right$集合的范围，但必然包含该$Right$集合。反之则得到$Right$集合的子集，我们将保证$Right$集合不变的长度范围记为$[Minl, Maxl]$。由此得出对于不同的状态，$Right$集合要么不相交，要么一个是另一个的真子集。不难发现，这种集合构成了树形的关系，我们称之为Parent树，如图\ref{imag_partree}所示。\par
+对于一个下标$r \in Right(t)$，只需要指定子串的长度$len$，就可以确定子串为$s(r - len, len)$。即给定一个状态的$Right$集合，只需要子串长度便可以确定子串。当给定的长度变短时，子串出现的位置可能变多，以至于超出$Right$集合的范围，但必然包含该$Right$集合。反之则得到$Right$集合的子集，我们将保证$Right$集合不变的子串长度范围记为$[Minl, Maxl]$。由此得出对于不同的状态，$Right$集合要么不相交，要么一个是另一个的真子集。不难发现，这种集合构成了树形的关系，我们称之为Parent树，如图\ref{imag_partree}所示。\par
 
 \begin{figure}[htbp]
 	\centering
@@ -277,7 +277,7 @@
 	\caption{"abbab"的Parent树}\label{imag_partree}
 \end{figure}
 
-不难发现，每个状态的$Right$集合都等于其孩子状态$Right$集合的并集，因此我们不必存下每个状态的$Right$集合，需要时通过dfs查询即可。同时也可以发现，对于长度范围，$Maxl(fa) = Minl(s) - 1$。\par
+不难发现，每个状态的$Right$集合都等于其孩子状态$Right$集合的并集，因此我们不必存下每个状态的$Right$集合，需要时通过深度优先搜索查询即可。同时也可以发现，对于长度范围，$Maxl(fa) = Minl(s) - 1$。\par
 对于最长公共前缀的查询，我们只需要沿着状态转移函数走，直至走不到合法状态为止。从当前状态的$Right$集合中选出一个下标，结合转移步数，便可定位匹配的子串。而对于一般的字符串匹配，则必须将模式串全部走完，再递归求出整个$Right$集合，得到全部匹配的子串。\par
 下面，我们来看如何动态构建$SAM$。
 
@@ -286,13 +286,13 @@
 \section{动态构建}
 由于需要满足动态扩展的特性，$SAM$的构建算法必须是在线的，即每次添加一个字符，并更新当前$SAM$使其成为包含该字符的$SAM$。\par
 若当前字符串为$s$，长度为$l$，在加入字符$x$后，新增的子串必然是$s \circ x$的后缀。我们考虑所有表示$s$后缀的状态，对于其中的某个状态$p = ST(s)$，显然$p$对应的$Right$集合中有且只有一个$l$，而其他状态的$Right$集合都包含$l$，因此它们必然全是$p$的祖先。不妨将$p$沿着Parent树到根的路径记为$v_{1} = p, v_{2}, ... , v_{k} = root$。对于其中的一个状态$v$，它的$Right$集合为$\{r_{1}, r_{2}, ..., r_{n} = l\}$，那么在添加新字符$x$后形成的新状态$nv$中，只有$s[r_{i}] = x$的那些$r_{i}$是符合要求的。由此得出，如果从$v$出发没有标号为$x$的边（先不看$r_{n}$），那$v$的$Right$集合中就没有满足条件的$r_{i}$。如果从$v_{i}$出发有标号为$x$的边，由于$v_{i}$的$Right$集合是依次扩大的，那么$v_{i+1}$也有，因此我们考虑其中第一个有标号$x$的边的状态$v_{p}$。如果我们记添加字符$x$后的新状态$np = ST(s \circ x)$，则$Right(np) = \{l + 1\}$。对于$v_{p}$之前的状态，由于出发没有标号为$x$的边，其$Right$集合中只有$r_{n}$是满足要求的，因此将它们连一条到$np$标号为$x$的边。若$v_{p}$的$Right$集合为$\{r_{1}, r_{2}, ..., r_{n} = l\}$，记$trans(v_{p}, x) = q$，那么$q$的$Right$集合就是$\{r_{i} + 1 | s[r_{i}] = x\}$（注意这是更新前的情况，$r_{n}$是不算的）。但我们不能直接在$q$的$Right$集合中插入$l + 1$，因为以$l + 1$结尾的串可能达不到$Maxl(q)$的长度。当$Maxl(q) = Maxl(v_{p}) + 1$时不会有这种问题，令$Parent(np) = q$即可。否则需要新建节点$nq$，令$Right(nq) = Right(q) \cup \{l + 1\}$，此时的$Maxl(nq) = Maxl(v_{p}) + 1$，而$Right(q)$则是$Right(nq)$的真子集。所以令$Parent(q) = nq$，同时$Parent(np) = nq$即可。对于节点$nq$的状态转移函数$Trans(nq)$，由于$l + 1$后没有字符，所以与$Trans(q)$相同。最后，对于$v_{p}$之后的节点，只有连续的一段$v_{p}, ..., v_{e}$是会通过标号为$x$的边走到节点$q$的，由于节点$q$已经被替换成了$nq$，故只需要将$v_{p}, ..., v_{e}$的$trans(v_{i}, x)$设为$nq$即可。\par
-至此，我们已经完成了对$SAM$的更新，流程如算法\ref{algo_sam_append}所示。\par
+至此，我们已经完成了对$SAM$的更新，流程如算法\ref{algo_samappend}所示。\par
 
 \begin{algorithm}[H]
 	\SetKwData{x}{x}\SetKwData{root}{root}\SetKwData{p}{p}\SetKwData{np}{np}\SetKwData{q}{q}\SetKwData{nq}{nq}
 	\SetKwFunction{trans}{trans}\SetKwFunction{Parent}{Parent}
 	\SetKwInOut{Input}{input}\SetKwInOut{Output}{output}
-	\Input{$SAM$, Character \x}
+	\Input{$SAM$, character \x}
 	\Output{new $SAM$}
 	$Maxl(np) \leftarrow Maxl(p) + 1$\;
 	\While{$\p \neq NULL\ And\ \trans(\p, \x) = NULL$}{
@@ -314,11 +314,18 @@
 			$\p \leftarrow \Parent(\p)$\;
 		}
 	}
-	\caption{Append character on SAM}\label{algo_sam_append}
+	\caption{Append character on SAM}\label{algo_samappend}
 \end{algorithm}
 
 可见，虽然原理上稍显复杂，但具体的算法流程还是很简洁的。
 
+
+
+\section{线性证明}
+$SAM$与后缀树相同，不管是空间复杂度，还是构造的时间复杂度，都是线性的。下面给出简单的证明。\par
+观察Parent树可以发现，每个叶子节点都对应字符串的不同下标，因而叶子节点的个数只有N个。同时，由于每个内部节点至少有两个孩子，容易证明这棵树的大小必然是$O(N)$的。由于树上的每个节点代表一个$Right$集合，而$Right$集合又与状态一一对应。由此可知，$SAM$的状态数是线性的。\par
+此外，我们还需要证明状态转移边的大小也是$O(N)$的。首先，SAM的状态和状态转移函数构成一张DAG，我们可以求出这个DAG的生成树（与Parent树没有关系），其根节点为$Init$，叶子节点为$End$。若状态数为$M$，则生成树上最多只有$M - 1$条边。而对于一条非树边$trans(S, c) = T$，我们构造$Init \rightarrow S$ -c-> $T \rightarrow End$的路径，其中$\rightarrow$表示生成树上的路径。由于这是一条从$Init$到$End$的路径，根据定义可知这条路径代表字符串的一个后缀。对于一个后缀，我们沿着自动机走，将其对应到经过的第一条非树边上，那么每个后缀最多对应一条非树边。而按照上面的方法构造，一条非树边至少可以被一个后缀所对应，所以非树边的数量不会超过后缀的数量。因此$SAM$的状态转移边数也是线性的。\par
+综上可知，$SAM$的空间复杂度是线性的。而考察上面的在线更新算法可以发现，每插入一个字符，至多增加$np$与$nq$两个状态，因此构造$SAM$的复杂度也是线性的。
 
 
 \section{具体应用}
@@ -329,257 +336,76 @@
 
 
 
-\chapter{k近似匹配}
+\chapter{近似查询}
+前面我们构建了基于多层次引用的索引结构，也介绍了如何使用后缀自动机将这一过程的复杂度降至最低。接下来，我们要讨论如何在索引结构中检索近似信息。
 
 
 
-
-%现在开始正文
-
-\chapter{引言}
-
-\section{背景}
-
-众所周知，编写毕业论文的过程如算法\ref{algor:write}所示。
-
-\begin{algorithm}[H]
-	\KwData{字符串}
-	\KwResult{一篇毕业论文}
-	初始化\;
-	\While{当前时间未达到截止时间}{
-		阅读现有内容\;
-		\If{不知道自己在写什么}{
-			重写\;
-		}
-	}
-	\caption{编写毕业论文}
-	\label{algor:write}
-\end{algorithm}
-
-\section{国内外研究现状}
-
-国内外众多高校的毕业论文都有官方或非官方\LaTeX 模版，让莘莘学子从繁琐的排版细节中解放出来，得以集中精力于研究和写作工作本身。 
-
-\section{本文工作}
-
-我们建立了一个尽可能符合《中山大学本科生毕业论文(设计)写作与印制规范》的\LaTeX 模版，容许任何人自由使用，然而我们无法保证它是否完全符合学校的相关要求，甚至不保证它可以正常编译\endnote{反正我是可以正常编译。}。对于使用此模版造成的任何后果，本人不负有任何责任。
-
-\chapter{模版使用说明}
-
-\section{正常使用}
-
-本模版主要组成部分有：
-
-\begin{itemize}
-	\item {\ttfamily main.tex}为主文件，毕业论文的内容应放在这个文件中。
-	\item {\ttfamily main.bib}为参考文献记录。
-	\item {\ttfamily sysuthesis.bst}为参考文献样式文件。
-	\item {\ttfamily sysuthesis.cls}为文类文件，应与主文件放在相同的目录中。
-	\item {\ttfamily image/logo.png}为用在封面的校徽。
-\end{itemize}
-
-主文件{\ttfamily main.tex}基本上是自解释的。在正常使用时，只用按照源文件中注释在正确位置填写各种基本信息、开题报告内容和中英文摘要内容，然后把注释``现在开始正文''到注释``篇末注''之间部分替换为正文，再按照注释在正确位置加入参考文献、致谢和附录等。最后用{\ttfamily xelatex}编译即可：
-
-\begin{lstlisting}[language=bash, keywordstyle=\color{blue}\bfseries, basicstyle=\ttfamily, breaklines=true, frame=shadowbox]
-xelatex main
-bibtex main
-xelatex main
-xelatex main
-\end{lstlisting}
-。当然也可以用{\ttfamily makefile}或用脚本简化编译过程。
-
-\section{配置}
-
-在使用本模版前，请先保证已安装以下宏包：
-
-\begin{itemize}
-	\item {\ttfamily ctex}
-	\item {\ttfamily tocloft}
-	\item {\ttfamily calc}
-	\item {\ttfamily graphicx}
-	\item {\ttfamily amsmath}
-	\item {\ttfamily amssymb}
-	\item {\ttfamily amsthm}
-	\item {\ttfamily listings}
-	\item {\ttfamily subfig}
-	\item {\ttfamily longtable}
-	\item {\ttfamily endnotes}
-	\item {\ttfamily algorithm2e}
-	\item {\ttfamily hyperref}
-	\item {\ttfamily placeins}
-\end{itemize}
-
-为了让{\ttfamily algorithm2e}宏包支持中文，请把该宏包的文件{\ttfamily algorithm2e.sty}（在我的系统中，它在{\ttfamily /usr/share/texlive/texmf-dist/tex/latex/algorithm2e/}）替换为本模版附带的同名文件。不需要描述算法时，可以在{\ttfamily sysuthesis.cls}中去掉以下代码
-\begin{lstlisting}[language=TeX, keywordstyle=\color{blue}\bfseries, basicstyle=\ttfamily, breaklines=true, frame=shadowbox]
-\RequirePackage[chinese,onelanguage,noline,noend,linesnumbered]{algorithm2e}
-\end{lstlisting}
-并在主文件中去掉以下代码
-\begin{lstlisting}[language=TeX, keywordstyle=\color{blue}\bfseries, basicstyle=\ttfamily, breaklines=true, frame=shadowbox]
-\listofalgorithms
-\end{lstlisting}
-（源文件有注释提示）。
-
-如果在windows编译且希望使用微软的字体时，请把{\ttfamily sysuthesis.cls}中以下代码
-\begin{lstlisting}[language=TeX, keywordstyle=\color{blue}\bfseries, basicstyle=\ttfamily, breaklines=true, frame=shadowbox]
-\LoadClass[adobefonts,a4paper,openright,cs4size,fancyhdr]{ctexbook}[2010/01/22]
-\end{lstlisting}
-改为
-\begin{lstlisting}[language=TeX, keywordstyle=\color{blue}\bfseries, basicstyle=\ttfamily, breaklines=true, frame=shadowbox]
-\LoadClass[winfonts,a4paper,openright,cs4size,fancyhdr]{ctexbook}[2010/01/22]
-\end{lstlisting}。
-
-如果想使用开源字体{\ttfamily Fandol}（假定已安装它），请把{\ttfamily ctex}宏包的文件{\ttfamily ctex-xecjk-adobefonts.def}（在我的系统中，它在{\ttfamily /usr/share/ texlive/texmf-dist/tex/latex/ctex/fontset/}）替换为本模版附带的同名文件。
-
-关于参考文献的bib条目格式参考\texttt{main.bib}~\cite{article}\cite{book}\cite{phdthesis}\cite{inproc}\cite{masterthesis}\cite{manual}\cite{report}\cite{database}\cite{software}\cite{standard}\cite{newspaper}\cite{patent}。
-
-\chapter{写作时的注意事项}
-
-本章列出一些本模板未能规范也不太适合以注释形形式写在源文件的要求，请使用者注意。
-
-\section{毕业论文的撰写内容与要求}
-
-正文一般包括以下几个方面:
-
-\begin{enumerate}
-	\item 引言或背景\\
-		引言是论文正文的开端,应包括毕业论文选题的背景、目的和意义;对国内外研究现状和相关领域中已有的研究成果的简要评述;介绍本项研究工作研究设想、研究方法或实验设计、理论依据或实验基础;涉及范围和预期结果等。要求言简意赅,注意不要与摘要雷同或成为摘要的注解。
-	\item 主体\\
-		论文主体是毕业论文的主要部分,必须言之成理,论据可靠,严格遵循本学科国际通行的学术规范。在写作上要注意结构合理、层次分明、重点突出,章节标题、公式图表符号必须规范统一。论文主体的内容根据不同学科有不同的特点,一般应包括以下几个方面:
-		\begin{itemize}
-			\item 毕业论文(设计)总体方案或选题的论证;
-			\item 毕业论文(设计)各部分的设计实现,包括实验数据的获取、数据可行性及有效性的处理与分析、各部分的设计计算等;
-			\item 对研究内容及成果的客观阐述,包括理论依据、创新见解、创造性成果及其改进与实际应用价值等;
-			\item 论文主体的所有数据必须真实可靠,凡引用他人观点、方案、资料、数据等,无论曾否发表,无论是纸质或电子版,均应详加注释。自然科学论文应推理正确、结论清晰;人文和社会学科的论文应把握论点正确、论证充分、论据可靠,恰当运用系统分析和比较研究的方法进行模型或方案设计,注重实证研究和案例分析,根据分析结果提出建议和改进措施等。
-		\end{itemize}
-	\item 结论\\
-		结论是毕业论文的总结,是整篇论文的归宿,应精炼、准确、完整。结论应着重阐述自己的创造性成果及其在本研究领域中的意义、作用,还可进一步提出需要讨论的问题和建议。
-\end{enumerate}
-
-\section{毕业论文的撰写格式要求}
-
-除有特殊要求的专业外,毕业论文正文一般不少于 5000 字。各专业可根据需要确定具体的文字和字数要求,并报教务处备案。
-
-正文各部分的标题应简明扼要,不使用标点符号。
-
-名词术语的要求：
-
-\begin{itemize}
-	\item 科学技术名词术语尽量采用全国自然科学名词审定委员会公布的规范词或国家标准、部标准中规定的名称,尚未统一规定或叫法有争议的名词术语,可采用惯用的名称。
-	\item 特定含义的名词术语或新名词、以及使用外文缩写代替某一名词术语时 , 首 次 出 现 时 应 在 括 号 内 注 明 其 含 义 , 如 : OECD ( Organisation for Economic Co-operation and Development) 代替经济合作发展组织。
-	\item 外国人名一般采用英文原名,可不译成中文,英文人名按姓前名后的原则书写,如:CRAY P,不可将外国人姓名中的名部分漏写,例如:不能只写CRAY, 应写成 CRAY P。一般很熟知的外国人名(如牛顿、爱因斯坦、达尔文、马克思等)可按通常标准译法写译名。
-\end{itemize}
-
-物理量名称、符号与计量单位的要求：
-
-\begin{itemize}
-	\item 论文中某一物理量的名称和符号应统一,一律采用国务院发布的《中华人民共和国法定计量单位》。单位名称和符号的书写方式,应采用国际通用符号。
-	\item 在不涉及具体数据表达时允许使用中文计量单位如“千克”。
-	\item 表 达 时 刻 应 采 用 中 文 计 量 单 位 , 如 “ 下 午 3 点 10 分 ” , 不 能 写 成“3h10min”,在表格中可以用“3:10PM”表示。
-	\item 物理量符号、物理量常量、变量符号用斜体,计量单位符号均用正体。
-\end{itemize}
-
-数字的要求：
-
-\begin{itemize}
-	\item 无特别约定情况下,一般均采用印度——阿拉伯数字表示。
-	\item 年份一律使用 4 位数字表示。
-	\item 小数的表示方法:一般情形下,小于 1 的数,需在小数点之前加 0。但当某些特殊数字不可能大于 1 时(如相关系数、比率、概率值),小数点之前的 0 要去掉,如 r=.26,p<.05。
-	\item 统计符号的格式:一般除 μ、α、β、λ、ε 以及 V 等符号外,其余统计符号一律以斜体字呈现,如ANCOVA , ANOVA , MANOVA , N , nl , M , SD , F , p , r 等。
-\end{itemize}
-
-公式的要求：
-
-\begin{itemize}
-	\item 公式应另起一行写在稿纸中央。一行写不完的长公式,最好在等号处转行,如做不到这一点,可在运算符号(如“+”、“-”号)处转行,等号或运算符号应在转行后的行首。
-	\item 公式的编号用圆括号括起,放在公式右边行末,在公式和编号之间不加虚线。公式可按全文统编序号,也可按章独立序号,如(49)或(4.11)。采用哪一种序号应和图序、表序编法一致。不应出现某章里的公式编序号,有的则不编序号。子公式可不编序号,需要引用时可加编 a、b、c......,重复引用的公式不得另编新序号。公式序号必须连续,不得重复或跳缺。
-	\item 文中引用某一公式时,写成“由式(16.20)”。
-\end{itemize}
-
-表格的要求(表\ref{tab:skew}为一个也许不合格的例子)：
-
-\begin{itemize}
-	\item 表格必须与论文叙述有直接联系,不得出现与论文叙述脱节的表格。表格中的内容在技术上不得与正文矛盾。
-	\item 每个表格都应有自己的标题和序号。标题应写在表格上方正中,不加标点,序号写在标题左方。
-	\item 全文的表格可以统一编序,也可以逐章单独编序。采用哪一种方式应和插图、公式的编序方式统一。表序必须连续,不得跳缺。
-	\item 表格允许下页接写,接写时标题省略,表头应重复书写,并在右上方写“续表××”。多项大表可以分割成块,多页书写,接口处必须注明“接下页”、“接上页”、“接第×页”字样。
-	\item 表格应放在离正文首次出现处最近的地方,不应超前和过分拖后。
-\end{itemize}
-
-\begin{table}[hbp]
-	\caption{各个倾斜校正方法性能对比}
-	\centering
-	\begin{tabular}{lrrrrr}
-		\hline
-		& 成功返回率 & 平均误差& 均方误差& 误差中位数& 运行时间中位数\\
-  & & （弧度） & （弧度） & （弧度） & （毫秒）\\\hline
-		参照方法&$\mathbf{100.00\%}$&0.1298&0.1504&0.1286&$\mathbf{0}$\\
-		分片填涂方法&93.48\%&0.0621&0.1947&0.0061&50\\
-		分片覆盖方法&99.10\%&0.0154&$\mathbf{0.0299}$&0.0073&300\\
-		投影方法&99.35\%&$\mathbf{0.0068}$&0.0335&$\mathbf{0.0033}$&197\\
-		交错数方法&99.35\%&0.0101&0.0458&0.0035&198\\
-		霍夫变换方法&99.35\%&0.1448&0.1827&0.0452&99\\
-		行间相关方法&93.81\%&0.2115&0.3811&0.0346&1615\\
-		最近邻方法&96.71\%&0.0883&0.1207&0.0690&67\\\hline
-	\end{tabular}
-	\label{tab:skew}
-\end{table}
-
-图的要求(图\ref{fig:skew}为一个也许不合格的例子)：
-
-\begin{itemize}
-	\item 插图应与文字内容相符,技术内容正确。所有制图应符合国家标准和专业标准。对无规定符号的图形应采用该行业的常用画法。
-	\item 每幅插图应有标题和序号,全文的插图可以统一编序,也可以逐章单独编序,如:图 45 或图 6.8。采取哪一种方式应和表格、公式的编序方式统一。图序必须连续,不重复,不跳缺。
-	\item 由若干分图组成的插图,分图用 a、b、c......标序。分图的图名以及图中各种代号的意义,以图注形式写在图题下方,先写分图名,另起行写代号的意义。
-	\item 图与图标题、图序号为一个整体,不得拆开排版为两页。当页空白不够排版该图整体时,可将其后文字部分提前,将图移至次页最前面。
-	\item 对坐标轴必须进行文字标示,有数字标注的坐标图必须注明坐标单位。
-\end{itemize}
+\section{k近似匹配}
+在引言中我们说明了k近似匹配的规则，现在我们先介绍如何进行直观的k近似匹配，再介绍如何将其推广到索引结构中。\par
+在经典的k近似匹配算法[]中，有一种称为种子扩展模式的方法。该算法基于这样一个事实：对于长度为$N$的模式串，如果文本串中存在与其编辑距离不超过k的子串，那么模式串与该子串之间必定存在长度至少为$r = \lfloor \frac{N}{k+1} \rfloor$的公共子串。基于这一性质，我们可以先将模式串等分成$k + 1$份种子，对于每个种子先找出它在文本串中的精确匹配。假设匹配位置的下标为$i$，根据编辑距离的特性，近似匹配的结果必然在$[i - (N - r) - k, i + N + k]$这一区间中，之后的求解可以分不同情况使用Shift-or、Bit-parallel等算法。由于该部分可以细分许多情况，十分复杂，在这里我们直接使用滚动数组优化的动态规划算法求解。\par
+对于某个种子找出的精确匹配位置$i$，我们与种子前面的模式串$pre$做逆向（从右向左）的动态规划，记录下区间$[i - (N - r) - k, i]$中各个位置到$i$的子串与$pre$的编辑距离结果。再从$i + r$开始与种子后面的模式串$suf$做正向的动态规划，通过类似的过程记录下结果。由于动态规划的转移至多与前一列有关，而我们只关心最后一列的结果，因此可以利用滚动数组将空间降至$O(N)$，如图\ref{imag_dp}所示。将上面两步得出的结果排序后扫描，便可快速得出所有k近似匹配子串。\par
 
 \begin{figure}[htbp]
 	\centering
-	\subfloat[参照方法]{
-		\includegraphics[scale=0.15]{image/err_ref.png}
-	}
-	\subfloat[分片填涂方法]{
-		\includegraphics[scale=0.15]{image/err_ppa.png}
-	}\\
-	\subfloat[分片覆盖方法]{
-		\includegraphics[scale=0.15]{image/err_pcp.png}
-	}
-	\subfloat[投影方法]{
-		\includegraphics[scale=0.15]{image/err_pp.png}
-	}\\
-	\subfloat[交错数方法]{
-		\includegraphics[scale=0.15]{image/err_tc.png}
-	}
-	\subfloat[霍夫变换方法]{
-		\includegraphics[scale=0.15]{image/err_ht.png}
-	}\\
-	\subfloat[行间相关方法]{
-		\includegraphics[scale=0.15]{image/err_cc.png}
-	}
-	\subfloat[最近邻方法]{
-		\includegraphics[scale=0.15]{image/err_nn.png}
-	}
-	\caption{各个倾斜校正方法的残差图}
-	\label{fig:skew}
+	\includegraphics[scale=0.35]{image/dp.png}
+	\caption{动态规划}\label{imag_dp}
 \end{figure}
 
-\chapter{结论}
+以上算法的基础在于，能够在字符串集合中快速精确匹配种子出现的所有位置。幸运的是，后缀自动机完全可以胜任，具体方法之前也已提到。因此，对于索引结构上的k近似匹配，可以先在$PREF$构成的后缀自动机上匹配种子出现的位置，再在主引用中通过动态规划找出全部的k近似匹配。但这样得到的只是$PREF$中的结果，如何将其扩展到$COMP$集合上呢？我们将在下一节解决这个问题。
 
-\section{取得成果}
 
-一个大概不为人知的模版，可以认为对于人类无任何贡献。
 
-\section{后续工作}
+\section{区间覆盖与区间树}
+上一节我们完成了在$PREF$中的k近似匹配，对于其中的某个匹配结果，实质上是一个主引用的子串。如果其他串的某个索引刚好覆盖这一子串，则该结果也必然出现在那个串中。基于这一逻辑，对于$refid$相同的一些$RME$，他们对应的区间存在一定的覆盖关系。如果我们能维护这种覆盖关系，就能从$PREF$中的结果开始，通过宽度优先搜索的方式推出全部$COMP$中的结果。\par
+那我们该如何维护这种关系呢？显然，区间树是个很好的选择。\par
+区间树是一种基于平衡树[]的数据结构。我们都知道，平衡树可以快速维护有序序列，在$O(logN)$的复杂度下完成元素的插入、删除，序列的最值查询等。而区间树则可以维护区间集合及其内部关系，除了可以快速插入、删除区间外，还可以找出覆盖某个区间的所有区间子集，而后者刚好是我们所需要的。图\ref{imag_intvtree}展示了区间树的组织形式。\par
 
-此模版有以下已知局限性：
+\begin{figure}[htbp]
+	\centering
+	\includegraphics[scale=0.25]{image/intvtree.png}
+	\caption{区间树}\label{imag_intvtree}
+\end{figure}
 
-\begin{itemize}
-	\item 篇末注只支持最多10个
-	\item 有时用户可能要直接修改cls文件
-	\item 遗留了一些格式化代码在tex文件
-\end{itemize}
+从图中可以看到，每个区间以一个节点的方式出现在平衡树中，而区间的左端点则用来作为比较的键值。值得注意的是，每个节点除了记录区间的右端点外，还记录了当前子树下右端点的最值。这样的好处在于，对于查询要覆盖的区间$[s, t]$，如果该子树下最右的端点都小于$t$，那么这棵子树中一定不存在可行解。\par
+由此，我们得出在区间树中查询所有覆盖区间$[s, t]$节点的算法。首先从区间树的根节点$root$开始进行深度优先搜素，如果当前节点对应子树的右端点最值小于$t$则直接返回。否则比较该节点的左端点与$s$的大小关系，如果左端点小于等于$s$，则检查该点是否为可行答案，然后同时递归进入两棵子树中，否则只递归进入左子树。流程如算法\ref{algo_intquery}所示，其中$low$表示左端点，$high$表示右端点，$maxh$表示子树中右端点的最值，左右子树分别用$left$与$right$表示。\par
 
+\begin{algorithm}[H]
+	\SetKwData{u}{u}\SetKwData{s}{s}\SetKwData{t}{t}\SetKwData{root}{root}\SetKwData{result}{result}
+	\SetKwFunction{dfs}{dfs}\SetKwFunction{low}{low}\SetKwFunction{high}{high}\SetKwFunction{maxh}{maxh}\SetKwFunction{left}{left}\SetKwFunction{right}{right}
+	\SetKwProg{Procedure}{Procedure}{}{}
+	\SetKwInOut{Input}{Input}\SetKwInOut{Output}{Output}
+	\Input{\root of IntTree, interval [\s, \t]}
+	\Output{set of Node which cover interval [\s, \t]}
+	\Procedure{\dfs{\u, \s, \t}}{
+		\lIf{$\u = NULL\ Or\ \maxh(\u) < \t$}{return}
+		\If{$\low(\u) \leq \s$}{
+			\lIf{$\high(\u) \geq \t$}{add \u to \result}
+			\dfs(\right(u), \s, \t)\;
+		}
+		\dfs(\left(u), \s, \t)\;
+	}
+	\caption{Query interval in IntTree}\label{algo_intquery}
+\end{algorithm}
+
+至此，我们可以对每个字符串都建一棵区间树，用以维护引用该字符串的索引。然后将$PREF$中的结果插入宽度优先搜索队列中，每次取出队头的结果，在它对应的区间树中找出所有覆盖该区间的$RME$，通过$RME$的$offset$计算出结果对应的子串，再将该子串插入搜索队列中，重复上述过程即可。
+
+
+
+\section{重叠时的匹配}
+经过前面的步骤，我们已经完成了大部分结果的匹配，但还有一小部分的遗漏。如果$COMP$中的结果跨越不止一个$RME$，只考察区间覆盖的话并不能涉及这种情况。因此我们还需要最后一步，找出跨越$RME$交点的匹配结果。\par
+如果模式串的长度最多为$maxn$，而询问的误差最多为$maxk$，由于编辑距离的特性，令$\delta = maxn + maxk - 1$，则跨越$RME$的结果必然在以$mismatch$为中心的长度为$\delta * 2 + 1$的区间内。
+我们可以再用一个$SAM$来维护每个$RME$对应区间里的字符串，和$PREF$一样将它们全部连接起来插入$SAM$中，然后像之前的过程一样进行查询即可。需要注意的是，在$RME$长度较短而$\delta$较大时这些区间可能会重叠，重复插入会浪费空间与构造速度，插入时跳过已经插入的前缀即可。\par
+至此我们已经完成了在索引结构中进行k近似匹配的所有步骤，总结起来分以下三步：1）在主引用中利用$SAM$与动态规划匹配结果；2）通过区间树将之前的结果扩展到$COMP$集合中$RME$内部的结果；3）通过与第一步类似的方式找出跨越$RME$的结果。下面我们举一个简单的例子：\par
+
+
+
+
+\chapter{模板}
+
+我们建立了一个尽可能符合《中山大学本科生毕业论文(设计)写作与印制规范》的\LaTeX 模版，容许任何人自由使用，然而我们无法保证它是否完全符合学校的相关要求，甚至不保证它可以正常编译\endnote{反正我是可以正常编译。}。对于使用此模版造成的任何后果，本人不负有任何责任。
+
+关于参考文献的bib条目格式参考\texttt{main.bib}~\cite{article}\cite{book}\cite{phdthesis}\cite{inproc}\cite{masterthesis}\cite{manual}\cite{report}\cite{database}\cite{software}\cite{standard}\cite{newspaper}\cite{patent}。
 
 %篇末注（非常抱歉只支持最多10个，在正文通过\endnote{}命令生成）
 \displayendnotes
