--- a/tex/main.bib
+++ b/tex/main.bib
@@ -1,96 +1,139 @@
-@article{article,
-	author="作者A and 作者B and 作者C and 作者D",
-	title="文章名",
-	journal="期刊",
-	year="2000",
-	volume="4",
-	number="3",
-	pages="12-87",
-	language="zh"
-}	
-@book{book,
-	author="作者A and 作者B and 作者C",
-	title="书名",
-	publisher="出版社",
-	year="1999",
-	address="北京"
+@article{knuth1977fast,
+  title={Fast pattern matching in strings},
+  author={Knuth, Donald E and Morris, Jr, James H and Pratt, Vaughan R},
+  journal={SIAM journal on computing},
+  volume={6},
+  number={2},
+  pages={323--350},
+  year={1977},
+  publisher={SIAM}
 }
-@patent{patent,
-	author="作者A and 作者B",
-	title="标题",
-	address="国家",
-	key="代号",
-	year="2001",
-	month="12",
-	date="2"
+@article{ziv1977universal,
+  title={A universal algorithm for sequential data compression},
+  author={Ziv, Jacob and Lempel, Abraham},
+  journal={IEEE Transactions on information theory},
+  volume={23},
+  number={3},
+  pages={337--343},
+  year={1977}
 }
-@newspaper{newspaper,
-	author="作者",
-	title="标题",
-	journal="报纸",
-	year="2015",
-	month="2",
-	date="1"
+@article{deorowicz2011robust,
+  title={Robust relative compression of genomes with random access},
+  author={Deorowicz, Sebastian and Grabowski, Szymon},
+  journal={Bioinformatics},
+  volume={27},
+  number={21},
+  pages={2979--2986},
+  year={2011},
+  publisher={Oxford Univ Press}
 }
-@database{database,
-	title="数据库",
-	author="作者",
-	url="http://www.gnu.org/",
-	month="10",
-	year="1999",
-	date="3"
+@article{pinho2012green,
+  title={GReEn: a tool for efficient compression of genome resequencing data},
+  author={Pinho, Armando J and Pratas, Diogo and Garcia, Sara P},
+  journal={Nucleic acids research},
+  volume={40},
+  number={4},
+  pages={e27--e27},
+  year={2012},
+  publisher={Oxford Univ Press}
 }
-@inproceedings{inproc,
-	author="作者",
-	title="标题",
-	booktitle="刊名",
-	year="1998",
-	volume="4(12)",
-	pages="123-323",
-	address="北京",
-	publisher="出版社"
+@article{wandelt2013fresco,
+  title={FRESCO: Referential compression of highly similar sequences},
+  author={Wandelt, Sebastian and Leser, Ulf},
+  journal={Computational Biology and Bioinformatics, IEEE/ACM Transactions on},
+  volume={10},
+  number={5},
+  pages={1275--1288},
+  year={2013},
+  publisher={IEEE}
 }
-@manual{manual,
-	title="文献题目",
-	author="作者",
-	url="http://www.gnu.org/",
-	month="10",
-	year="2012",
-	date="12"
+@inproceedings{claude2011indexes,
+  title={Indexes for highly repetitive document collections},
+  author={Claude, Francisco and Fari{\~n}a, Antonio and Mart{\'\i}nez-Prieto, Miguel A and Navarro, Gonzalo},
+  booktitle={Proceedings of the 20th ACM international conference on Information and knowledge management},
+  pages={463--468},
+  year={2011},
+  organization={ACM}
 }
-@software{software,
-	title="软件",
-	author="作者",
-	url="http://www.gnu.org/",
-	month="10",
-	year="2012",
-	date="12"
+@article{hoobin2011relative,
+  title={Relative Lempel-Ziv factorization for efficient storage and retrieval of web collections},
+  author={Hoobin, Christopher and Puglisi, Simon J and Zobel, Justin},
+  journal={Proceedings of the VLDB Endowment},
+  volume={5},
+  number={3},
+  pages={265--273},
+  year={2011},
+  publisher={VLDB Endowment}
 }
-@mastersthesis{masterthesis,
-	author="作者",
-	title="标题",
-	school="学校",
-	year="1999",
-	address="合肥"
+@inproceedings{yang2013efficient,
+  title={Efficient direct search on compressed genomic data},
+  author={Yang, Xiaochun and Wang, Bin and Li, Chen and Wang, Jiaying and Xie, Xiaohui},
+  booktitle={Data Engineering (ICDE), 2013 IEEE 29th International Conference on},
+  pages={961--972},
+  year={2013},
+  organization={IEEE}
 }
-@phdthesis{phdthesis,
-	author="作者",
-	title="标题",
-	school="学校",
-	year="1999",
-	address="合肥"
+@article{danek2014indexes,
+  title={Indexes of large genome collections on a PC},
+  author={Danek, Agnieszka and Deorowicz, Sebastian and Grabowski, Szymon},
+  journal={PloS one},
+  volume={9},
+  number={10},
+  pages={e109384},
+  year={2014},
+  publisher={Public Library of Science}
 }
-@standard{standard,
-	key="代号",
-	title="标题",
-	address="出版地",
-	year="1999",
-	publisher="出版单位"
+@article{siren2014indexing,
+  title={Indexing graphs for path queries with applications in genome research},
+  author={Sir{\'e}n, Jouni and V{\"a}lim{\"a}ki, Niko and M{\"a}kinen, Veli},
+  journal={IEEE/ACM Transactions on Computational Biology and Bioinformatics (TCBB)},
+  volume={11},
+  number={2},
+  pages={375--388},
+  year={2014},
+  publisher={IEEE Computer Society Press}
 }
-@techreport{report,
-	author="报告者",
-	title="报告题目",
-	institution="报告会主办单位",
-	year="报告年份",
-	address="报告地"
+@article{wandelt2015mrcsi,
+  title={Mrcsi: Compressing and searching string collections with multiple references},
+  author={Wandelt, Sebastian and Leser, Ulf},
+  journal={Proceedings of the VLDB Endowment},
+  volume={8},
+  number={5},
+  pages={461--472},
+  year={2015},
+  publisher={VLDB Endowment}
+}
+@article{ukkonen1995line,
+  title={On-line construction of suffix trees},
+  author={Ukkonen, Esko},
+  journal={Algorithmica},
+  volume={14},
+  number={3},
+  pages={249--260},
+  year={1995},
+  publisher={Springer}
+}
+@article{ukkonen1993approximate,
+  title={Approximate string matching with suffix automata},
+  author={Ukkonen, Esko and Wood, Derick},
+  journal={Algorithmica},
+  volume={10},
+  number={5},
+  pages={353--364},
+  year={1993},
+  publisher={Springer}
+}
+@inproceedings{baeza1992fast,
+  title={Fast and practical approximate string matching},
+  author={Baeza-Yates, Ricardo A and Perleberg, Chris H},
+  booktitle={Combinatorial Pattern Matching},
+  pages={185--192},
+  year={1992},
+  organization={Springer}
+}
+@book{cormen2009introduction,
+  title={Introduction to algorithms},
+  author={Cormen, Thomas H},
+  year={2009},
+  publisher={MIT press}
 }
